2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Message’ with ‘struct link’ + ‘struct u_log’.

	* rcs.c (struct u_log): New.
	(struct Message): Delete.
	(messagelst): Change type to ‘struct link’.
	(nextmessage): Delete var.
	(getmessage): Take ‘struct link **’; use ‘extend’.
	(domessages): Update to walk ‘struct link’ list.
	(main): Update call to ‘getmessage’; update ‘messagelst’ access.

2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Revpairs’ with ‘struct link’ + ‘struct revrange’.

	* rlog.c (struct revrange): New.
	(struct Revpairs): Delete.
	(revlist, Revlst): Change type to ‘struct link *’.
	(extractdelta): Update to walk ‘struct link’ list.
	(PUSH): New macro.
	(getnumericrev): Update to walk ‘struct link’ list; use ‘PUSH’.
	(putrevpairs): Use ‘PUSH’.

2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: prepend

	* b-esds.h (prepend): New func decl.
	* b-esds.c (prepend): New func.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct u_symdef’ more.

	* rcs.c (struct u_symdef): Move from here...
	* base.h (struct u_symdef): ...to here.
	* ci.c: #include "b-esds.h".
	(struct Symrev): Delete.
	(assoclst): Change type to ‘struct link’.
	(nextassoc): Delete var.
	(addsyms): Update to walk ‘struct link’ list.
	(addassoclst): Delete func.
	(first_meaningful_symbolic_name): New static func.
	(main): Combine ‘-n’, ‘-N’ handling; update ‘assoclst’
	init and access; use ‘first_meaningful_symbolic_name’.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct link’ more.

	* rcs.c (struct chaccess): Delete member ‘nextchaccess’.
	(chaccess): Change type to ‘struct link’.
	(nextchaccess): Delete var.
	(getchaccess): Take ‘struct link **’; use ‘extend’.
	(getaccessor): Take ‘struct link **’; update call to ‘getchaccess’.
	(doaccess): Update to walk ‘struct link’ list.
	(main): Update calls to ‘getaccessor’, ‘getchaccess’.

2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
