@@ -1,5 +1,16 @@
 2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Replace ‘Iptr_type’ with ‘char *’.
+
+	* b-fro.h (Iptr_type): Delete typedef.
+	(struct fro): Change type to ‘char *’ for members ‘ptr’, ‘lim’, ‘base’.
+	* b-fro.c (fro_open): Use ‘char *’ directly.
+	* rcsedit.c (struct editstuff): Likewise.
+	(movelines, insertline, snapshotline, snapshotedit_fast)
+	(finisheditline, finishedit_fast, enterstring): Likewise.
+
+2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Replace ‘struct Message’ with ‘struct link’ + ‘struct u_log’.
 
 	* rcs.c (struct u_log): New.
